--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NeuralText\n",
+    "# NeuralText - 🚧 WORK IN PROGRESS 🚧\n",
     "\n",
     "> Decoding speech-related neural activity into text"
    ]
@@ -33,7 +33,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   }
