--- a/nbs/12_model.ipynb
+++ b/nbs/12_model.ipynb
@@ -49,8 +49,34 @@
     "from typing import Optional, Tuple\n",
     "\n",
     "import torch\n",
-    "import torch.nn as nn\n",
+    "from torch import nn\n",
+    "import torch.nn.functional as F\n",
     "from torchtyping import TensorType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def get_vocab():\n",
+    "    chars = ['a','b','c','d','e','f','g','h','i','j',\n",
+    "             'k','l','m','n','o','p','q','r','s','t',\n",
+    "             'u','v','w','x','y','z', '>',',',\"'\",'~','?'\n",
+    "    ]\n",
+    "    \n",
+    "    return {c: i for i, c in enumerate(chars)}\n",
+    "    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RNN - The Decoder"
    ]
   },
   {
@@ -75,15 +101,24 @@
     "class RNN(nn.Module):\n",
     "    \"\"\"The Decoder Neural Signal.\"\"\"\n",
     "    def __init__(\n",
-    "        self, input_size: int, hidden_size: int, output_size: int, slow_frequency: int = 100\n",
+    "        self,\n",
+    "        input_size: int = 192, # The firing rate\n",
+    "        hidden_size: int = 512,\n",
+    "        output_size: int = 31, # The number of vocabs\n",
+    "        slow_frequency: int = 100\n",
     "    ):\n",
     "        super().__init__()\n",
     "        self.hidden_size = hidden_size\n",
     "        self.slow_frequency = slow_frequency\n",
-    "\n",
+    "        \n",
     "        self.gru1 = nn.GRU(input_size, hidden_size)\n",
     "        self.gru2 = nn.GRU(hidden_size, output_size)\n",
-    "        self.zt = nn.Linear(hidden_size, 1)\n",
+    "        self.z_layer = nn.Linear(hidden_size, 1)\n",
+    "    \n",
+    "    def get_prob_next_character(\n",
+    "        self, x # The hidden state\n",
+    "    ) -> TensorType[1]: # The probability of the next character\n",
+    "        return F.sigmoid(self.z_layer(x))\n",
     "\n",
     "    def forward(\n",
     "        self,\n",
@@ -96,8 +131,8 @@
     "        \"\"\"The forward pass.\"\"\"\n",
     "        gru1_out, hidden = self.gru1(x, hidden)\n",
     "        gru2_out = self.gru2(gru1_out)[0][::self.slow_frequency]\n",
-    "        zt_out = torch.sigmoid(self.zt(hidden[0]))\n",
-    "        return gru2_out, zt_out, hidden"
+    "        z_t = self.get_prob_next_character(hidden[0])\n",
+    "        return gru2_out, z_t, hidden"
    ]
   },
   {
@@ -110,7 +145,52 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L26){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L42){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### RNN.get_prob_next_character\n",
+       "\n",
+       ">      RNN.get_prob_next_character (x)\n",
+       "\n",
+       "|    | **Type** | **Details** |\n",
+       "| -- | -------- | ----------- |\n",
+       "| x |  | The hidden state |\n",
+       "| **Returns** | **Annotated** | **The probability of the next character** |"
+      ],
+      "text/plain": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L42){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### RNN.get_prob_next_character\n",
+       "\n",
+       ">      RNN.get_prob_next_character (x)\n",
+       "\n",
+       "|    | **Type** | **Details** |\n",
+       "| -- | -------- | ----------- |\n",
+       "| x |  | The hidden state |\n",
+       "| **Returns** | **Annotated** | **The probability of the next character** |"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_doc(RNN.get_prob_next_character)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L48){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### RNN.forward\n",
        "\n",
@@ -121,7 +201,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L26){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L48){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### RNN.forward\n",
        "\n",
@@ -138,6 +218,13 @@
    "source": [
     "show_doc(RNN.forward)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
