add label2num for character dataset

--- a/nbs/05_dataset.ipynb
+++ b/nbs/05_dataset.ipynb
@@ -13,11 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# | default_exp dataset"
@@ -26,11 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# | hide\n",
@@ -40,11 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#| hide\n",
@@ -54,11 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
@@ -95,11 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
@@ -119,21 +99,23 @@
     "        self.ys = ys\n",
     "        self.vocabs: Set[str] = vocabs\n",
     "    \n",
+    "    def label2num(self, label: str) -> int:\n",
+    "        return list(self.vocabs).index(label)\n",
+    "    \n",
+    "    def num2label(self, num: int) -> str:\n",
+    "        return list(self.vocabs)[num]\n",
+    "    \n",
     "    def __len__(self) -> int:\n",
     "        return len(self.ys)\n",
     "\n",
     "    def __getitem__(self, index) -> Tuple[int, TensorType['n_step', 'n_channel']]:\n",
-    "        return self.xs[index], self.ys[index]"
+    "        return self.label2num(self.xs[index]), self.ys[index]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
