add inference test for rnn model

--- a/nbs/05_dataset.ipynb
+++ b/nbs/05_dataset.ipynb
@@ -93,7 +93,7 @@
     "            \n",
     "            for item in items:\n",
     "                xs.append(letter)\n",
-    "                ys.append(torch.tensor(item))\n",
+    "                ys.append(torch.tensor(item).float())\n",
     "        \n",
     "        self.xs: List[str] = xs\n",
     "        self.ys = ys\n",
