--- a/nbs/12_model.ipynb
+++ b/nbs/12_model.ipynb
@@ -126,13 +126,13 @@
     "    ) -> Tuple[\n",
     "        torch.Tensor,\n",
     "        torch.Tensor,\n",
-    "        torch.Tensor\n",
+    "        TensorType[1]\n",
     "    ]:\n",
     "        \"\"\"The forward pass.\"\"\"\n",
     "        gru1_out, hidden = self.gru1(x, hidden)\n",
     "        gru2_out = self.gru2(gru1_out)[0][::self.slow_frequency]\n",
     "        z_t = self.get_prob_next_character(hidden[0])\n",
-    "        return gru2_out, z_t, hidden"
+    "        return gru2_out, hidden, z_t"
    ]
   },
   {
