refactor rnn model

--- a/nbs/11_utils.ipynb
+++ b/nbs/11_utils.ipynb
@@ -46,11 +46,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "import re\n",
-    "\n",
     "import scipy\n",
-    "import yaml\n",
-    "import torch"
+    "import yaml"
    ]
   },
   {
