--- a/nbs/12_model.ipynb
+++ b/nbs/12_model.ipynb
@@ -105,32 +105,30 @@
     "        input_size: int = 192, # The firing rate\n",
     "        hidden_size: int = 512,\n",
     "        output_size: int = 31, # The number of vocabs\n",
-    "        slow_frequency: int = 100\n",
     "    ):\n",
     "        super().__init__()\n",
-    "        self.hidden_size = hidden_size\n",
-    "        self.slow_frequency = slow_frequency\n",
     "        \n",
     "        self.gru1 = nn.GRU(input_size, hidden_size)\n",
     "        self.gru2 = nn.GRU(hidden_size, output_size)\n",
     "        self.z_layer = nn.Linear(hidden_size, 1)\n",
     "    \n",
     "    def get_prob_next_character(\n",
-    "        self, x # The hidden state\n",
+    "        self, x: TensorType[\"batch_size\", \"hidden_size\"]\n",
     "    ) -> TensorType[1]: # The probability of the next character\n",
     "        return F.sigmoid(self.z_layer(x))\n",
     "\n",
     "    def forward(\n",
     "        self,\n",
-    "        x: torch.Tensor, hidden: Optional[torch.Tensor] = None\n",
+    "        x: TensorType[\"batch_size\", \"n_vocabs\"],\n",
+    "        hidden: Optional[TensorType[\"batch_size\", \"hidden_size\"]] = None\n",
     "    ) -> Tuple[\n",
-    "        torch.Tensor,\n",
-    "        torch.Tensor,\n",
+    "        TensorType[\"batch_size\", \"n_vocabs\"],\n",
+    "        TensorType[\"batch_size\", \"hidden_size\"],\n",
     "        TensorType[1]\n",
     "    ]:\n",
     "        \"\"\"The forward pass.\"\"\"\n",
     "        gru1_out, hidden = self.gru1(x, hidden)\n",
-    "        gru2_out = self.gru2(gru1_out)[0][::self.slow_frequency]\n",
+    "        gru2_out = self.gru2(gru1_out)[0]\n",
     "        z_t = self.get_prob_next_character(hidden[0])\n",
     "        return gru2_out, hidden, z_t"
    ]
