add neural dataset for sentences

--- a/nbs/11_utils.ipynb
+++ b/nbs/11_utils.ipynb
@@ -46,8 +46,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "from typing import List\n",
+    "\n",
     "import scipy\n",
-    "import yaml"
+    "import yaml\n",
+    "import numpy as np"
    ]
   },
   {
@@ -103,6 +106,19 @@
     "    trial_data = {extract_letters(key): data[key][trial] for key in data.keys() if key.startswith(\"neuralActivityCube_\")}\n",
     "    del trial_data[\"doNothing\"]\n",
     "    return trial_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def get_sentence_data(path: str) -> List:\n",
+    "    data = mat2dict(path)\n",
+    "    pair_data = [[k[0][0], v] for k, v in zip(data[\"sentencePrompt\"], data[\"neuralActivityCube\"])]\n",
+    "    return pair_data"
    ]
   }
  ],
