--- a/nbs/12_model.ipynb
+++ b/nbs/12_model.ipynb
@@ -46,12 +46,13 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "from typing import Optional, Tuple\n",
+    "from typing import Optional, Tuple, Dict\n",
     "\n",
-    "import torch\n",
     "from torch import nn\n",
     "import torch.nn.functional as F\n",
-    "from torchtyping import TensorType"
+    "\n",
+    "from torchtyping import TensorType\n",
+    "from einops import rearrange"
    ]
   },
   {
@@ -61,12 +62,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def get_vocab():\n",
+    "def get_vocab() -> Dict[str, int]:\n",
     "    chars = ['a','b','c','d','e','f','g','h','i','j',\n",
     "             'k','l','m','n','o','p','q','r','s','t',\n",
     "             'u','v','w','x','y','z', '>',',',\"'\",'~','?'\n",
     "    ]\n",
-    "    \n",
     "    return {c: i for i, c in enumerate(chars)}\n",
     "    "
    ]
@@ -97,6 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "#| export\n",
     "class RNN(nn.Module):\n",
     "    \"\"\"The Decoder Neural Signal.\"\"\"\n",
@@ -107,14 +108,13 @@
     "        output_size: int = 31, # The number of vocabs\n",
     "    ):\n",
     "        super().__init__()\n",
-    "        \n",
     "        self.gru1 = nn.GRU(input_size, hidden_size)\n",
     "        self.gru2 = nn.GRU(hidden_size, output_size)\n",
     "        self.z_layer = nn.Linear(hidden_size, 1)\n",
     "    \n",
     "    def get_prob_next_character(\n",
     "        self, x: TensorType[\"batch_size\", \"hidden_size\"]\n",
-    "    ) -> TensorType[1]: # The probability of the next character\n",
+    "    ) -> TensorType[1]: # The probability that there will be a next character\n",
     "        return F.sigmoid(self.z_layer(x))\n",
     "\n",
     "    def forward(\n",
@@ -129,7 +129,8 @@
     "        \"\"\"The forward pass.\"\"\"\n",
     "        gru1_out, hidden = self.gru1(x, hidden)\n",
     "        gru2_out = self.gru2(gru1_out)[0]\n",
-    "        z_t = self.get_prob_next_character(hidden[0])\n",
+    "        z_t = self.get_prob_next_character(hidden)\n",
+    "        z_t = rearrange(z_t, '1 b -> b')\n",
     "        return gru2_out, hidden, z_t"
    ]
   },
