--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| hide\n",
-    "from neuraltext.core import *"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -59,6 +49,23 @@
    "source": [
     "![image.png](attachment:image.png)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TODO\n",
+    "- Generate synthetic sentences\n",
+    "- Create snippet template for each character\n",
+    "- Create a Dataset class for sentences\n",
+    "- Labelling sentence data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
