--- a/nbs/05_dataset.ipynb
+++ b/nbs/05_dataset.ipynb
@@ -46,12 +46,12 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "import re\n",
     "from typing import Optional, List, Tuple, Set\n",
     "\n",
     "import torch\n",
     "from torch.utils.data import Dataset\n",
     "from torchtyping import TensorType\n",
+    "from transformers import AutoTokenizer\n",
     "\n",
     "from neuraltext.utils import mat2dict"
    ]
@@ -88,28 +88,26 @@
     "        xs = []\n",
     "        ys = []\n",
     "        vocabs = set()\n",
+    "        \n",
+    "        tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")\n",
+    "        \n",
     "        for letter, items in data.items():\n",
     "            vocabs.add(letter)\n",
     "            \n",
     "            for item in items:\n",
-    "                xs.append(letter)\n",
+    "                tokenized_letter = tokenizer(letter)[\"input_ids\"][0]\n",
+    "                xs.append(tokenized_letter)\n",
     "                ys.append(torch.tensor(item).float())\n",
     "        \n",
     "        self.xs: List[str] = xs\n",
     "        self.ys = ys\n",
     "        self.vocabs: Set[str] = vocabs\n",
     "    \n",
-    "    def label2num(self, label: str) -> int:\n",
-    "        return list(self.vocabs).index(label)\n",
-    "    \n",
-    "    def num2label(self, num: int) -> str:\n",
-    "        return list(self.vocabs)[num]\n",
-    "    \n",
     "    def __len__(self) -> int:\n",
     "        return len(self.ys)\n",
     "\n",
     "    def __getitem__(self, index) -> Tuple[int, TensorType['n_step', 'n_channel']]:\n",
-    "        return self.label2num(self.xs[index]), self.ys[index]"
+    "        return self.xs[index], self.ys[index]"
    ]
   },
   {
@@ -120,9 +118,31 @@
    "source": [
     "#| export\n",
     "class NeuralSentenceDataset(Dataset):\n",
-    "    def __init__(self):\n",
-    "        pass"
+    "    \"\"\"Dataset for neural sentences.\"\"\"\n",
+    "    def __init__(self, data, tokenizer):\n",
+    "        xs = []\n",
+    "        ys = []\n",
+    "        \n",
+    "        for sentence, neural_data in data:\n",
+    "            tokenized_sentence = tokenizer(sentence, return_tensors=\"pt\")[\"input_ids\"][0]\n",
+    "            xs.append(tokenized_sentence)\n",
+    "            ys.append(torch.tensor(neural_data).float())\n",
+    "        \n",
+    "        self.xs = xs\n",
+    "        self.ys = ys\n",
+    "    \n",
+    "    def __getitem__(\n",
+    "        self, index: int\n",
+    "    ) -> Tuple[TensorType[\"seq_len\"], TensorType[\"n_steps\", \"n_channels\"]]:\n",
+    "        return self.xs[index], self.ys[index]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
