split tokenizer out of character dataset

--- a/nbs/05_dataset.ipynb
+++ b/nbs/05_dataset.ipynb
@@ -46,14 +46,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "from typing import Optional, List, Tuple, Set\n",
+    "from typing import List, Tuple, Set, Callable\n",
     "\n",
     "import torch\n",
     "from torch.utils.data import Dataset\n",
-    "from torchtyping import TensorType\n",
-    "from transformers import AutoTokenizer\n",
-    "\n",
-    "from neuraltext.utils import mat2dict"
+    "from torchtyping import TensorType"
    ]
   },
   {
@@ -84,12 +81,10 @@
    "source": [
     "#| export\n",
     "class NeuralCharacterDataset(Dataset):\n",
-    "    def __init__(self, data: dict):\n",
+    "    def __init__(self, data: dict, tokenizer):\n",
     "        xs = []\n",
     "        ys = []\n",
     "        vocabs = set()\n",
-    "        \n",
-    "        tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")\n",
     "        \n",
     "        for letter, items in data.items():\n",
     "            vocabs.add(letter)\n",
@@ -119,7 +114,7 @@
     "#| export\n",
     "class NeuralSentenceDataset(Dataset):\n",
     "    \"\"\"Dataset for neural sentences.\"\"\"\n",
-    "    def __init__(self, data, tokenizer):\n",
+    "    def __init__(self, data, tokenizer: Callable):\n",
     "        xs = []\n",
     "        ys = []\n",
     "        \n",
