add synthetic dataset generator

--- a/nbs/12_model.ipynb
+++ b/nbs/12_model.ipynb
@@ -43,7 +43,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/education/DATA/projects/neuroscience/neuraltext/env/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
     "from typing import Optional, Tuple, Dict\n",
@@ -67,8 +76,7 @@
     "             'k','l','m','n','o','p','q','r','s','t',\n",
     "             'u','v','w','x','y','z', '>',',',\"'\",'~','?'\n",
     "    ]\n",
-    "    return {c: i for i, c in enumerate(chars)}\n",
-    "    "
+    "    return {c: i for i, c in enumerate(chars)}"
    ]
   },
   {
@@ -144,30 +152,34 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L42){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L38){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### RNN.get_prob_next_character\n",
        "\n",
-       ">      RNN.get_prob_next_character (x)\n",
+       ">      RNN.get_prob_next_character (x:typing.Annotated[torch.Tensor,{'__torchtyp\n",
+       ">                                   ing__':True,'details':('batch_size','hidden_\n",
+       ">                                   size',),'cls_name':'TensorType'}])\n",
        "\n",
        "|    | **Type** | **Details** |\n",
        "| -- | -------- | ----------- |\n",
-       "| x |  | The hidden state |\n",
-       "| **Returns** | **Annotated** | **The probability of the next character** |"
+       "| x | Annotated |  |\n",
+       "| **Returns** | **Annotated** | **The probability that there will be a next character** |"
       ],
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L42){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L38){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### RNN.get_prob_next_character\n",
        "\n",
-       ">      RNN.get_prob_next_character (x)\n",
+       ">      RNN.get_prob_next_character (x:typing.Annotated[torch.Tensor,{'__torchtyp\n",
+       ">                                   ing__':True,'details':('batch_size','hidden_\n",
+       ">                                   size',),'cls_name':'TensorType'}])\n",
        "\n",
        "|    | **Type** | **Details** |\n",
        "| -- | -------- | ----------- |\n",
-       "| x |  | The hidden state |\n",
-       "| **Returns** | **Annotated** | **The probability of the next character** |"
+       "| x | Annotated |  |\n",
+       "| **Returns** | **Annotated** | **The probability that there will be a next character** |"
       ]
      },
      "execution_count": null,
@@ -189,22 +201,30 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L48){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L43){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### RNN.forward\n",
        "\n",
-       ">      RNN.forward (x:torch.Tensor, hidden:Optional[torch.Tensor]=None)\n",
+       ">      RNN.forward (x:typing.Annotated[torch.Tensor,{'__torchtyping__':True,'det\n",
+       ">                   ails':('batch_size','n_vocabs',),'cls_name':'TensorType'}], \n",
+       ">                   hidden:Optional[Annotated[torch.Tensor,{'__torchtyping__':Tr\n",
+       ">                   ue,'details':('batch_size','hidden_size',),'cls_name':'Tenso\n",
+       ">                   rType'}]]=None)\n",
        "\n",
        "The forward pass."
       ],
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L48){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L43){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### RNN.forward\n",
        "\n",
-       ">      RNN.forward (x:torch.Tensor, hidden:Optional[torch.Tensor]=None)\n",
+       ">      RNN.forward (x:typing.Annotated[torch.Tensor,{'__torchtyping__':True,'det\n",
+       ">                   ails':('batch_size','n_vocabs',),'cls_name':'TensorType'}], \n",
+       ">                   hidden:Optional[Annotated[torch.Tensor,{'__torchtyping__':Tr\n",
+       ">                   ue,'details':('batch_size','hidden_size',),'cls_name':'Tenso\n",
+       ">                   rType'}]]=None)\n",
        "\n",
        "The forward pass."
       ]
@@ -217,13 +237,6 @@
    "source": [
     "show_doc(RNN.forward)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
