--- a/nbs/05_dataset.ipynb
+++ b/nbs/05_dataset.ipynb
@@ -43,7 +43,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/education/DATA/projects/neuroscience/neuraltext/env/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
     "from typing import List, Tuple, Set, Callable\n",
@@ -131,13 +140,6 @@
     "    ) -> Tuple[TensorType[\"seq_len\"], TensorType[\"n_steps\", \"n_channels\"]]:\n",
     "        return self.xs[index], self.ys[index]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
