--- a/nbs/06_synthetic.ipynb
+++ b/nbs/06_synthetic.ipynb
@@ -54,7 +54,7 @@
     "import torch.nn.functional as F\n",
     "from torchtyping import TensorType\n",
     "\n",
-    "from neuraltext.model import get_vocab\n",
+    "from neuraltext.model import get_vocabs\n",
     "from neuraltext.utils import mat2dict"
    ]
   },
@@ -67,6 +67,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -74,36 +79,13 @@
    "source": [
     "#| export\n",
     "def load_snippet(character: str, path: str = \"./data/snippets/t5.2020.01.13_snippets.mat\"):\n",
-    "    vocabs = get_vocab().keys()\n",
+    "    vocabs = get_vocabs().keys()\n",
     "    assert character in vocabs, f\"Vocab {character} not found\"\n",
     "\n",
     "    # TODO: don't hardcode >\n",
     "    character = \"greaterThan\" if character == \">\" else character\n",
     "    snippets = mat2dict(path)\n",
     "    return snippets[character]"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Synthetic Neural Representation for Words"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "class SyntheticWord:\n",
-    "    def __init__(self) -> None:\n",
-    "        pass\n",
-    "    \n",
-    "    def generate(self):\n",
-    "        pass"
    ]
   },
   {
@@ -193,23 +175,19 @@
    "source": [
     "#| export\n",
     "class SyntheticSentence:\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        # snippet_path: str,\n",
-    "        # n_channels: int # The number of channels in the electrode array\n",
-    "    ):\n",
-    "        self.vocabs = get_vocab()\n",
+    "    def __init__(self):\n",
+    "        self.vocabs = get_vocabs()\n",
     "\n",
+    "    def word2idx(self, x: str) -> int:\n",
+    "        return self.vocabs[x]\n",
+    "    \n",
     "    def _extract_unique_characters(sentence: str) -> Set[str]:\n",
     "        # Use a set comprehension to create a set of unique characters\n",
     "        unique_chars = {char for char in sentence if char != ' '}\n",
     "        # Return the set of unique characters as a sorted list\n",
     "        return sorted(list(unique_chars))\n",
     "    \n",
-    "    def word2idx(self, x: str) -> int:\n",
-    "        return self.vocabs[x]\n",
-    "    \n",
-    "    def _generate_character_probs(self, sentence: str) -> TensorType[\"seq_len\"]:\n",
+    "    def _generate_character_probs(self, sentence: str) -> TensorType[\"seq_len\", \"n_vocabs\"]:\n",
     "        n_vocabs = len(self.vocabs)\n",
     "        \n",
     "        # TODO: don't hardcode\n",
@@ -220,7 +198,7 @@
     "        one_hot = F.one_hot(labels, n_vocabs)\n",
     "        return one_hot\n",
     "\n",
-    "    def _generate_character_signal(self, sentence):\n",
+    "    def _generate_character_signal(self, sentence) -> TensorType[\"seq_len\"]:\n",
     "        seq_len = len(sentence)\n",
     "        x = torch.ones(seq_len)\n",
     "        x[-1] = 0\n",
@@ -228,9 +206,11 @@
     "\n",
     "    def generate(self, sentence: str) -> Tuple[\n",
     "        TensorType[\"n_steps\", \"n_channels\"], # neural data\n",
+    "        TensorType[\"seq_len\", \"n_vocabs\"], # character probabilities\n",
+    "        TensorType[\"seq_len\"] # character signals\n",
     "    ]:\n",
     "        neural_data = torch.tensor([])\n",
-    "        \n",
+    "        sentence = sentence.lower()  \n",
     "        for character in sentence:\n",
     "            character = \">\" if character == \" \" else character        \n",
     "            neural_template = load_snippet(character)[0][0]\n",
