--- a/nbs/12_model.ipynb
+++ b/nbs/12_model.ipynb
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def get_vocab() -> Dict[str, int]:\n",
+    "def get_vocabs() -> Dict[str, int]:\n",
     "    chars = ['a','b','c','d','e','f','g','h','i','j',\n",
     "             'k','l','m','n','o','p','q','r','s','t',\n",
     "             'u','v','w','x','y','z', '>',',',\"'\",'~','?'\n",
