fix the range of chracter probability in the forward pass of RNN

--- a/nbs/12_model.ipynb
+++ b/nbs/12_model.ipynb
@@ -130,16 +130,16 @@
     "        x: TensorType[\"batch_size\", \"n_vocabs\"],\n",
     "        hidden: Optional[TensorType[\"batch_size\", \"hidden_size\"]] = None\n",
     "    ) -> Tuple[\n",
-    "        TensorType[\"batch_size\", \"n_vocabs\"],\n",
+    "        TensorType[\"batch_size\", \"n_vocabs\"], # the probabilty for each character\n",
     "        TensorType[\"batch_size\", \"hidden_size\"],\n",
     "        TensorType[1]\n",
     "    ]:\n",
     "        \"\"\"The forward pass.\"\"\"\n",
     "        gru1_out, hidden = self.gru1(x, hidden)\n",
-    "        gru2_out = self.gru2(gru1_out)[0]\n",
+    "        probs = F.softmax(self.gru2(gru1_out)[0], dim=-1)\n",
     "        z_t = self.get_prob_next_character(hidden)\n",
     "        z_t = rearrange(z_t, '1 b -> b')\n",
-    "        return gru2_out, hidden, z_t"
+    "        return probs, hidden, z_t"
    ]
   },
   {
