fix bug preprocess text in dataset

--- a/nbs/05_dataset.ipynb
+++ b/nbs/05_dataset.ipynb
@@ -55,7 +55,7 @@
    ],
    "source": [
     "#| export\n",
-    "from typing import List, Tuple, Set, Callable\n",
+    "from typing import List, Tuple, Set, Callable, Dict\n",
     "\n",
     "import torch\n",
     "from torch.utils.data import Dataset\n",
@@ -89,23 +89,70 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "def get_vocabs() -> Dict[str, int]:\n",
+    "    chars = ['a','b','c','d','e','f','g','h','i','j',\n",
+    "             'k','l','m','n','o','p','q','r','s','t',\n",
+    "             'u','v','w','x','y','z', '>',',',\"'\",'~','?'\n",
+    "    ]\n",
+    "    return {c: i for i, c in enumerate(chars)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "class TransformText:\n",
+    "    @staticmethod\n",
+    "    def encode(x: str) -> str:\n",
+    "        x = x.replace(',', '~')\n",
+    "        x = x.replace(' ', '>')\n",
+    "        return x\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def decode(x: str) -> str:\n",
+    "        x = x.replace('~', ',')\n",
+    "        x = x.replace('>', ' ')\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "class NeuralCharacterDataset(Dataset):\n",
     "    def __init__(self, data: dict, tokenizer):\n",
     "        xs = []\n",
     "        ys = []\n",
-    "        vocabs = set()\n",
+    "        vocabs = get_vocabs()\n",
     "        \n",
     "        for letter, items in data.items():\n",
-    "            vocabs.add(letter)\n",
-    "            \n",
     "            for item in items:\n",
-    "                tokenized_letter = tokenizer(letter)[\"input_ids\"][0]\n",
-    "                xs.append(tokenized_letter)\n",
+    "                letter = self.preprocess(letter)\n",
+    "                xs.append(vocabs[letter])\n",
     "                ys.append(torch.tensor(item).float())\n",
     "        \n",
     "        self.xs: List[str] = xs\n",
     "        self.ys = ys\n",
-    "        self.vocabs: Set[str] = vocabs\n",
+    "        self.vocabs = vocabs\n",
+    "    \n",
+    "    def preprocess(self, x: str) -> str:\n",
+    "        if x == \"greaterThan\":\n",
+    "            x = \">\"\n",
+    "        elif x == \"comma\":\n",
+    "            x = \",\"\n",
+    "        elif x == \"apostrophe\":\n",
+    "            x = \"'\"\n",
+    "        elif x == \"tilde\":\n",
+    "            x = \"~\"\n",
+    "        elif x == \"questionMark\":\n",
+    "            x = \"?\"\n",
+    "        return x\n",
     "    \n",
     "    def __len__(self) -> int:\n",
     "        return len(self.ys)\n",
