--- a/nbs/06_synthetic.ipynb
+++ b/nbs/06_synthetic.ipynb
@@ -54,7 +54,7 @@
     "import torch.nn.functional as F\n",
     "from torchtyping import TensorType\n",
     "\n",
-    "from neuraltext.model import get_vocabs\n",
+    "from neuraltext.dataset import get_vocabs\n",
     "from neuraltext.utils import mat2dict"
    ]
   },
@@ -65,11 +65,6 @@
    "source": [
     "### Neural Template"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
