--- a/nbs/12_model.ipynb
+++ b/nbs/12_model.ipynb
@@ -61,22 +61,9 @@
     "import torch.nn.functional as F\n",
     "\n",
     "from torchtyping import TensorType\n",
-    "from einops import rearrange"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def get_vocabs() -> Dict[str, int]:\n",
-    "    chars = ['a','b','c','d','e','f','g','h','i','j',\n",
-    "             'k','l','m','n','o','p','q','r','s','t',\n",
-    "             'u','v','w','x','y','z', '>',',',\"'\",'~','?'\n",
-    "    ]\n",
-    "    return {c: i for i, c in enumerate(chars)}"
+    "from einops import rearrange\n",
+    "\n",
+    "from neuraltext.dataset import get_vocabs"
    ]
   },
   {
@@ -120,7 +107,7 @@
     "        self.gru2 = nn.GRU(hidden_size, output_size)\n",
     "        self.z_layer = nn.Linear(hidden_size, 1)\n",
     "    \n",
-    "    def get_prob_next_character(\n",
+    "    def _get_prob_next_character(\n",
     "        self, x: TensorType[\"batch_size\", \"hidden_size\"]\n",
     "    ) -> TensorType[1]: # The probability that there will be a next character\n",
     "        return F.sigmoid(self.z_layer(x))\n",
@@ -137,58 +124,9 @@
     "        \"\"\"The forward pass.\"\"\"\n",
     "        gru1_out, hidden = self.gru1(x, hidden)\n",
     "        probs = F.softmax(self.gru2(gru1_out)[0], dim=-1)\n",
-    "        z_t = self.get_prob_next_character(hidden)\n",
+    "        z_t = self._get_prob_next_character(hidden)\n",
     "        z_t = rearrange(z_t, '1 b -> b')\n",
     "        return probs, hidden, z_t"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "---\n",
-       "\n",
-       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L38){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
-       "\n",
-       "### RNN.get_prob_next_character\n",
-       "\n",
-       ">      RNN.get_prob_next_character (x:typing.Annotated[torch.Tensor,{'__torchtyp\n",
-       ">                                   ing__':True,'details':('batch_size','hidden_\n",
-       ">                                   size',),'cls_name':'TensorType'}])\n",
-       "\n",
-       "|    | **Type** | **Details** |\n",
-       "| -- | -------- | ----------- |\n",
-       "| x | Annotated |  |\n",
-       "| **Returns** | **Annotated** | **The probability that there will be a next character** |"
-      ],
-      "text/plain": [
-       "---\n",
-       "\n",
-       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L38){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
-       "\n",
-       "### RNN.get_prob_next_character\n",
-       "\n",
-       ">      RNN.get_prob_next_character (x:typing.Annotated[torch.Tensor,{'__torchtyp\n",
-       ">                                   ing__':True,'details':('batch_size','hidden_\n",
-       ">                                   size',),'cls_name':'TensorType'}])\n",
-       "\n",
-       "|    | **Type** | **Details** |\n",
-       "| -- | -------- | ----------- |\n",
-       "| x | Annotated |  |\n",
-       "| **Returns** | **Annotated** | **The probability that there will be a next character** |"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "show_doc(RNN.get_prob_next_character)"
    ]
   },
   {
