--- a/nbs/12_model.ipynb
+++ b/nbs/12_model.ipynb
@@ -43,16 +43,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/education/DATA/projects/neuroscience/neuraltext/env/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| export\n",
     "from typing import Optional, Tuple, Dict\n",
@@ -61,9 +52,7 @@
     "import torch.nn.functional as F\n",
     "\n",
     "from torchtyping import TensorType\n",
-    "from einops import rearrange\n",
-    "\n",
-    "from neuraltext.dataset import get_vocabs"
+    "from einops import rearrange"
    ]
   },
   {
@@ -92,7 +81,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "#| export\n",
     "class RNN(nn.Module):\n",
     "    \"\"\"The Decoder Neural Signal.\"\"\"\n",
@@ -139,7 +127,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L43){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L34){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### RNN.forward\n",
        "\n",
@@ -154,7 +142,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L43){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/xrsrke/neuraltext/blob/main/neuraltext/model.py#L34){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### RNN.forward\n",
        "\n",
@@ -175,6 +163,13 @@
    "source": [
     "show_doc(RNN.forward)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
